# School-Homeworks

./: .gitattributes  .gitignore  README.md
3D-Gasket/: CMakeLists.txt  README.md  imgui.ini
3D-Gasket/assets/shader/: gasket.frag  gasket.vert
3D-Gasket/core/: Application.cpp  Application.h  Camera.cpp  Camera.h  Shader.cpp  Shader.h
3D-Gasket/gui/: UIManager.cpp  UIManager.h
3D-Gasket/rendering/: TetraGasket.cpp  TetraGasket.h
3D-Gasket/src/: main.cpp
CPP/: README.md
CPP/107考古/: Test1_Q1.cpp  Test1_Q2.cpp  Test1_Q3.cpp  Test1_Q4.cpp  Test2_Q1.cpp  Test2_Q2.cpp  Test2_Q3.cpp
CPP/109考古/: Test1_Q1.cpp  Test1_Q2.cpp  Test1_Q3.cpp  Test1_Q4.cpp  Test2_Q1.cpp  Test2_Q2.cpp  Test2_Q3.cpp
CPP/110考古/: Test1_Q1.cpp  Test1_Q2.cpp  Test1_Q3.cpp  Test1_Q4.cpp  Test2_Q1.cpp  Test2_Q2.cpp  (+2 more)
Creditcard-Transaction/: .gitignore  README.md  docker-compose.yml  load_test.js
Cyberpunk-Renderer/: Cyberpunk-Renderer.sln  README.md  Terrain-Engine.vcxproj  Terrain-Engine.vcxproj.filters  main.cpp
HPCxAI_Camp_2025/: README.md
Image-Enhancement/: README.md  ai_log.md  task_a.m  task_b.m  task_c.m
Java-Course-Example/: README.md
Recon-Blood/: .gitignore  Final_Project.ipynb  README.md  TXL_PBC_Streamlit_Colab.ipynb  _gen_notebook.py  analyze.py  app.py  blood_cell_detection.ipynb  blood_cell_detector.py  detect.py  eval_iou.py  integrated_blood_cell_experiment.py  report.md  requirements.txt  spec.md  txl_pbc_improved_cv.py
Rest/: README.md  deadlock.csv  main.cpp  main_bypass.cpp  main_bypass_fix1.cpp  main_bypass_fix2.cpp  main_bypass_fix3.cpp  main_bypass_fix4.cpp  output_rule.txt  preoccupied.csv  readme.txt  results_v1.md  results_v2.md  sushi_safe.cpp  test_easy.csv  test_normal.csv  test_race_condition.csv
(+392 files in other folders)
